style.css
body, html {
  display: flex;
  align-items: center;
  justify-content: center;
  font-family:Arial, Helvetica, sans-serif;
  background-image:url("background_image_unsplash.jpg"); /* Background image from unsplash*/
}

img {
  width: 100%;
  object-fit: cover;
}

header { /*Used this website to figure out the header https://codetheweb.blog/steps-to-creating-a-website/*/
  display: flex;
  align-items: center;
  top: 0;
  left: 0;
  right: 0;
  background-color: #fac35e;
position:fixed;
    box-shadow: rgba(0,0,0, 0.2) 0 10px 10px;
      border-radius:5px;
}

header * {
display: flex;
font-size:20px;
margin-right: 20px;
}

section{
display: flex;
flex-direction:column;
justify-content: center;
align-content: center;
text-align: center;
}


a:link {
text-decoration: none;
color: black;
}

a:hover {
text-decoration: underline;
}

ul {
list-style-position: inside;
}

#wrapper { /*Used this website to figure out the wrapper https://medium.com/@ianjsikes/build-a-personal-website-with-html-and-css-part-2-a12ca00f5c1b*/
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-top:50px;
  max-width: 50%;
  height: 80%;
  background-color:rgba(255, 255, 255, 0.7);
  box-shadow: rgba(0,0,0, 0.1) 0 10px 10px;
  border-radius:100px;
  
}

#name, #about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 5px;
  max-width: 40%;
}

#name {
  align-items: center;
  justify-content: center;
  width: 100vw; /*Used W3 schools for information on vw and vh */
  height: 100vh; 
}


.avatar {
margin-left: auto;
margin-right: auto;
width: 200px;
height: 200px;
box-shadow: rgba(0,0,0, 0.1) 0 10px 10px;
  border-radius:50%;
}

h1 {
text-decoration: underline;
font-size: 40px;
}

h2 {
font-style: italic;
}

h3 {
  white-space:pre-line; /*Used W3 schools for information on whitespace */
  }

.contacts { /*Used contacts code from card lab */
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.contacts li{
  width: 30px;
  display: inline-block;
  padding: 20px 10px;
}

.contacts li a img:hover {
  opacity: 0.5;
  transition: opacity ease-in-out 0.2s;
}

#wrapper2{
  margin-top:70px;
    white-space: pre-line;
   background-color:rgba(255, 255, 255, 0.7);
  box-shadow: rgba(0,0,0, 0.1) 0 10px 10px;
    border-radius:100px;
  
}

@media (max-width: 800px) {
  #wrapper{
  display:flex;
  flex-direction:column;
    font-size: 12px;
      max-width: 100%;

  }
  .avatar {
    width: 50%;
    
  }
  .contacts li{
  width: 15px;
  display: inline-block;
}
}

